[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/objects/event/object_animation_event.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/objects/items/powerful_flash/object_item_powerful_flash_script.gd" type="Script" id=3]
[ext_resource path="res://src/objects/skill/object_skill_camera_flash.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 30.8819

[node name="PowerfulFlash" type="Area2D"]
collision_layer = 2
collision_mask = 2048
script = ExtResource( 3 )
scene_to_unlock = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="InteractionArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Events" type="Node2D" parent="."]

[node name="ShowSkillHint" parent="Events" instance=ExtResource( 2 )]
animation_to_play = "show_strong_skill"
[connection signal="body_entered" from="." to="." method="_on_PowerfulFlash_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PowerfulFlash_body_exited"]
